Thu Feb 28 19:45:03 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Compiler_Features_19_Test.cpp:
        * tests/run_test.lst:
        * tests/tests.mpc:
          Added C++11 test for template alias support

Wed Feb 27 13:54:27 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Wild_Match_Test.cpp:
          Extended this test to get 100% coverage for ACE::wild_match, resolves
          Coverity 753117

Tue Feb 26 23:07:17 UTC 2013  Steve Huston  <shuston@riverace.com>

        * include/makeinclude/platform_g++_common.GNU: When turning on
          no-strict-aliasing, add the option to FLAGS_C_CC instead of
          CCFLAGS so that both C and C++ compilers get it.

Fri Feb 22 14:29:39 UTC 2013  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Message_Queue_Vx.inl (defined): Added a fix for RTP.  Thanks
          to Thomas dot Lockhart at jpl dot nasa dot gov for contributing this.

Mon Feb 25 08:09:24 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Sock_Connect.cpp:
          Don't use MAX_IF as constant, is a system defined constant on
          some operating systems

        * tests/OS_Test.cpp:
          Call compiler version methods, should fix some Coverity test
          coverage issues

Mon Feb 18 01:57:31 UTC 2013  Kevin Stanley  <stanleyk@ociweb.com>

        * ace/SSL/SSL_Context.cpp:

          Removed what appeared to be extraneous characters '3D'
          from cut and paste.

Sun Feb 17 03:37:42 UTC 2013  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/SSL/SSL_Context.h (ACE_SSL_Context): Added a missing comma.
          Thanks to Johnny for reporting this.

Sat Feb 16 21:53:26 UTC 2013  Kevin Stanley  <stanleyk@ociweb.com>

        * ace/SSL/SSL_Context.h:

          Fixed missing ',' in enumerated type value.

Sat Feb 16 14:42:54 UTC 2013  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>
