@@ -193,13 +193,19 @@ foreach my $test_lst (@file_list) {
         }
 
         $status = undef;
-        foreach my $path ($ACE_ROOT."/$directory",
-                          $TAO_ROOT."/$directory",
-                          $CIAO_ROOT."/$directory",
-                          $DANCE_ROOT."/$directory",
-                          $DDS_ROOT."/$directory",
-                          $startdir."/$directory",
-                          $startdir."/$orig_dir") {
+        my @dirlist = ($ACE_ROOT."/$directory",
+                       $TAO_ROOT."/$directory",
+                       $CIAO_ROOT."/$directory",
+                       $DANCE_ROOT."/$directory",
+                       $DDS_ROOT."/$directory");
+        # when $opt_r is set make sure to *first* check the explicitly
+        # specified directory and only when nothing found there check
+        # the default dirs
+	if ($opt_r) {
+	  unshift (@dirlist, $startdir."/$directory");
+	  unshift (@dirlist, $startdir."/$orig_dir");
+	}
+        foreach my $path (@dirlist) {
           if (-d $path && ($status = chdir ($path))) {
             last;
           }
